--- a/index.html
+++ b/index.html
@@ -1,26 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/reset-style.css" />
-    <link rel="stylesheet" href="./css/swiper.min.css" />
-    <link rel="stylesheet" href="./css/fancybox.min.css" />
-    <link rel="stylesheet" href="./css/sumoselect2.css" />
-    <link rel="stylesheet" href="./css/style.css" />
-    <link
-      rel="stylesheet"
-      href="./css/tablet-style.css"
-      media="(min-width: 768px)"
-    />
-    <link
-      rel="stylesheet"
-      href="./css/desk-style.css"
-      media="(min-width: 1025px)"
-    />
-    <title>EXEED</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/reset-style.css" />
+  <link rel="stylesheet" href="./css/swiper.min.css" />
+  <link rel="stylesheet" href="./css/fancybox.min.css" />
+  <link rel="stylesheet" href="./css/sumoselect2.css" />
+  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="./css/tablet-style.css" media="(min-width: 768px)" />
+  <link rel="stylesheet" href="./css/desk-style.css" media="(min-width: 1025px)" />
+  <title>EXEED</title>
 </head>
+
 <body>
   <header class="header">
     <div class="container">
@@ -51,12 +45,291 @@
     </div>
   </header>
   <section class="main-banner">
-    <div class="container"></div>
+    <div class="container">
+      <div class="main-banner__content">
+        <div class="main-banner__text">
+          <h1 class="main-banner__title">финальная распродажа</h1>
+          <span class="main-banner__sub-title">автомобилей Exeed по ценам 2022 года</span>
+        </div>
+        <button class="main-banner__button btn bg_gold_color">получить предложение</button>
+      </div>
+    </div>
   </section>
-    <script src="./libs/jquery.min.js"></script>
-    <script src="./libs/masked-input.min.js"></script>
-    <script src="./libs/fancybox.min.js"></script>
-    <script src="./libs/select2.js"></script>
-    <script src="./js/main.js"></script>
+  <section class="actions">
+    <div class="container">
+      <div class="actions__container">
+        <div class="actions__list">
+          <div class="actions__list-item">
+            <span>Кредит <span class="actions__text-color">от 4,9%</span></span>
+          </div>
+          <div class="actions__list-item">
+            <span>Максимальная<br> выгода <span class="actions__text-color"> 400 000₽</span></span>
+          </div>
+          <div class="actions__list-item">
+            <span>Первый взнос <span class="actions__text-color"> 0 ₽</span></span>
+          </div>
+        </div>
+        <form action="" class="actions__form">
+          <span class="actions__form-text">
+            Оставьте заявку и наш менеджер свяжется с вами в течение 5 минут
+          </span>
+          <div class="actions__form-flex">
+            <input type="text" class="actions__form-input" name="name" placeholder="Имя" required>
+            <input type="tel" class="actions__form-input" name="phone" placeholder="+7 (___)___-__-__" required>
+            <button class="actions__form-button btn bg_gold_color">оставить заявку</button>
+          </div>
+        </form>
+        <div class="actions__time">
+          <div class="actions__time-text">
+            <span class="actions__time-price">успейте получить</span>
+            <span class="actions__time-action">скидку за кредит</span>
+          </div>
+          <div class="timer">
+            <div class="time-count__item time-count__days">
+              <div class="time-count__val">00</div>
+              <span class="time-count__text">дней</span>
+              <div class="count-line progress-days"></div>
+              <div class="count-round">
+                <svg viewBox="0 0 64 64" class="pie">
+                  <circle class="background" r="50%" cx="50%" cy="50%"></circle>
+                  <circle class="chart chart-days" r="50%" cx="50%" cy="50%" stroke-dasharray="200 200"></circle>
+                </svg>
+              </div>
+            </div>
+            <div class="time-count__item time-count__hours">
+              <div class="time-count__val">00</div>
+              <span class="time-count__text">часов</span>
+              <div class="count-round">
+                <svg viewBox="0 0 64 64" class="pie">
+                  <circle class="background" r="50%" cx="50%" cy="50%"></circle>
+                  <circle class="chart chart-hours" r="50%" cx="50%" cy="50%" stroke-dasharray="200 200"></circle>
+                </svg>
+              </div>
+            </div>
+            <div class="time-count__item time-count__minutes">
+              <div class="time-count__val">00</div>
+              <span class="time-count__text">минут</span>
+              <div class="count-round">
+                <svg viewBox="0 0 64 64" class="pie">
+                  <circle class="background" r="50%" cx="50%" cy="50%"></circle>
+                  <circle class="chart chart-minutes" r="50%" cx="50%" cy="50%" stroke-dasharray="200 200"></circle>
+                </svg>
+              </div>
+            </div>
+            <div class="time-count__item time-count__seconds">
+              <div class="time-count__val">00</div>
+              <span class="time-count__text">секунд</span>
+              <div class="count-line progress-seconds"></div>
+              <div class="count-round">
+                <svg viewBox="0 0 64 64" class="pie">
+                  <circle class="background" r="50%" cx="50%" cy="50%"></circle>
+                  <circle class="chart chart-seconds" r="50%" cx="50%" cy="50%" stroke-dasharray="200 200"></circle>
+                </svg>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="models">
+    <div class="container">
+      <div class="section__upper models__upper">
+        <h2 class="section__title models__title">модельный ряд</h2>
+      </div>
+      <div class="models__list">
+        <!--============== start card  =================-->
+        <div class="models-card">
+          <div class="models-card__top">
+            <div class="models-card__info">
+              <span class="models-card__head">txl</span>
+              <div class="models__colors-container">
+                <div class="color-select">
+                  <span class="models__card-color color-active" data-color="0" data-model="523" data-colorName=""
+                    style="background: #000;">
+                  </span>
+                </div>
+                <div class="color-select">
+                  <span class="models__card-color" data-color="1" data-model="523" data-colorName=""
+                    style="background: red;">
+                  </span>
+                </div>
+                <div class="color-select">
+                  <span class="models__card-color" data-color="2" data-model="523" data-colorName=""
+                    style="background: blue;">
+                  </span>
+                </div>
+              </div>
+              <ul class="models-card__list">
+                <li class="models-card__list-item">
+                  <img src="./img/mod-1.svg" alt="icon" class="models-card__list-img">
+                  <span class="models-card__list-text">3 платежа в подарок</span>
+                </li>
+                <li class="models-card__list-item">
+                  <img src="./img/mod-2.svg" alt="icon" class="models-card__list-img">
+                  <span class="models-card__list-text">Каско в подарок</span>
+                </li>
+                <li class="models-card__list-item">
+                  <img src="./img/mod-3.svg" alt="icon" class="models-card__list-img">
+                  <span class="models-card__list-text">5 лет гарантии</span>
+                </li>
+                <li class="models-card__list-item">
+                  <img src="./img/mod-4.svg" alt="icon" class="models-card__list-img">
+                  <span class="models-card__list-text">Без первоначального взноса</span>
+                </li>
+                <li class="models-card__list-item">
+                  <img src="./img/mod-5.svg" alt="icon" class="models-card__list-img">
+                  <span class="models-card__list-text">Скидка за trade-in 300 000</span>
+                </li>
+              </ul>
+            </div>
+            <div class="modesl-card__image">
+              <div class="models-card__image-credit">
+                <span>Ставка</span> 
+                  <span class="models-card__image-stavka">4,9%</span>
+              </div>
+              <img src="./img/txl.svg" alt="name" class="model-card__img-position">
+              <img src="./img/models-test.png" alt="car" class="models-card__img">
+            </div>
+            <div class="models-card__images">
+              <a href="./img/444-1.png" data-fancybox="444" class="models-card__images-link">
+                <img src="./img/444-1.png" alt="" class="models-card__images-prev">
+              </a>
+              <a href="./img/444-2.png" data-fancybox="444" class="models-card__images-link">
+                <img src="./img/444-2.png" alt="" class="models-card__images-prev">
+              </a>
+              <a href="./img/444-3.png" data-fancybox="444" class="models-card__images-link">
+                <img src="./img/444-3.png" alt="" class="models-card__images-prev">
+              </a>
+              <a href="./img/444-4.png" data-fancybox="444" class="models-card__images-link">
+                <img src="./img/444-4.png" alt="" class="models-card__images-prev">
+              </a>
+            </div>
+          </div>
+          <div class="models-card__bottom">
+            <div class="models-card__prices">
+              <div class="models-card__prices-flex">
+                <span class="models-card__prices-text">Цена в кредит</span>
+                <span class="models-card__prices-month">от 5 900 ₽/мес.</span>
+              </div>
+              <div class="models-card__prices-flex flex_align_end">
+                <span class="models-card__prices-text">Цена</span>
+                <div class="models-card__prices-money">
+                  <span class="modesl-card__prices-old">от 5 555 900 ₽</span>
+                  <span class="models-card__prices-new">от 5 555 900 ₽</span>
+                </div>
+              </div>
+            </div>
+            <div class="models-card__btns">
+              <button class="models-card__button btn bg_gold_color js--popup-btn" data-carmodel="" data-carbrand="" data-carprice="" data-fancybox data-src="#popupCall">Забронировать автомобиль</button>
+              <button class="models-card__button btn bg_gold_color js--popup-btn" data-carmodel="" data-carbrand="" data-carprice="" data-fancybox data-src="#popupCredit">купить в кредит</button>
+            </div>
+          </div>
+        </div>
+        <!--=================================================-->
+        <div class="models-card">
+          <div class="models-card__top">
+            <div class="models-card__info">
+              <span class="models-card__head">txl</span>
+              <div class="models__colors-container">
+                <div class="color-select">
+                  <span class="models__card-color color-active" data-color="0" data-model="523" data-colorName=""
+                    style="background: #000;">
+                  </span>
+                </div>
+                <div class="color-select">
+                  <span class="models__card-color" data-color="1" data-model="523" data-colorName=""
+                    style="background: red;">
+                  </span>
+                </div>
+                <div class="color-select">
+                  <span class="models__card-color" data-color="2" data-model="523" data-colorName=""
+                    style="background: blue;">
+                  </span>
+                </div>
+              </div>
+              <ul class="models-card__list">
+                <li class="models-card__list-item">
+                  <img src="./img/mod-1.svg" alt="icon" class="models-card__list-img">
+                  <span class="models-card__list-text">3 платежа в подарок</span>
+                </li>
+                <li class="models-card__list-item">
+                  <img src="./img/mod-2.svg" alt="icon" class="models-card__list-img">
+                  <span class="models-card__list-text">Каско в подарок</span>
+                </li>
+                <li class="models-card__list-item">
+                  <img src="./img/mod-3.svg" alt="icon" class="models-card__list-img">
+                  <span class="models-card__list-text">5 лет гарантии</span>
+                </li>
+                <li class="models-card__list-item">
+                  <img src="./img/mod-4.svg" alt="icon" class="models-card__list-img">
+                  <span class="models-card__list-text">Без первоначального взноса</span>
+                </li>
+                <li class="models-card__list-item">
+                  <img src="./img/mod-5.svg" alt="icon" class="models-card__list-img">
+                  <span class="models-card__list-text">Скидка за trade-in 300 000</span>
+                </li>
+              </ul>
+            </div>
+            <div class="modesl-card__image">
+              <div class="models-card__image-credit">
+                <span>Ставка</span> 
+                  <span class="models-card__image-stavka">4,9%</span>
+              </div>
+              <img src="./img/txl.svg" alt="name" class="model-card__img-position">
+              <img src="./img/models-test.png" alt="car" class="models-card__img">
+            </div>
+            <div class="models-card__images">
+              <a href="./img/444-1.png" data-fancybox="444" class="models-card__images-link">
+                <img src="./img/444-1.png" alt="" class="models-card__images-prev">
+              </a>
+              <a href="./img/444-2.png" data-fancybox="444" class="models-card__images-link">
+                <img src="./img/444-2.png" alt="" class="models-card__images-prev">
+              </a>
+              <a href="./img/444-3.png" data-fancybox="444" class="models-card__images-link">
+                <img src="./img/444-3.png" alt="" class="models-card__images-prev">
+              </a>
+              <a href="./img/444-4.png" data-fancybox="444" class="models-card__images-link">
+                <img src="./img/444-4.png" alt="" class="models-card__images-prev">
+              </a>
+            </div>
+          </div>
+          <div class="models-card__bottom">
+            <div class="models-card__prices">
+              <div class="models-card__prices-flex">
+                <span class="models-card__prices-text">Цена в кредит</span>
+                <span class="models-card__prices-month">от 5 900 ₽/мес.</span>
+              </div>
+              <div class="models-card__prices-flex flex_align_end">
+                <span class="models-card__prices-text">Цена</span>
+                <div class="models-card__prices-money">
+                  <span class="modesl-card__prices-old">от 5 555 900 ₽</span>
+                  <span class="models-card__prices-new">от 5 555 900 ₽</span>
+                </div>
+              </div>
+            </div>
+            <div class="models-card__btns">
+              <button class="models-card__button btn bg_gold_color">Забронировать автомобиль</button>
+              <button class="models-card__button btn bg_gold_color">купить в кредит</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="credit">
+    <div class="container">
+      <div class="section__upper">
+        <h2 class="section__title credit__title">кредит</h2>
+      </div>
+    </div>
+  </section>
+  <script src="./libs/jquery.min.js"></script>
+  <script src="./libs/masked-input.min.js"></script>
+  <script src="./libs/fancybox.min.js"></script>
+  <script src="./libs/select2.js"></script>
+  <script src="./js/timer.js"></script>
+  <script src="./js/main.js"></script>
 </body>
+
 </html>
